2024-09-17T00:28:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10894265158 # 532
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
* notice: last 14d: unq all: 30 126
* notice: prev accum: outdated-unq outdated-all / unq all: 791 4455 / 812 4559
* notice: next accum: outdated-unq outdated-all / unq all: 794 4459 / 825 4585
* notice: prev exec diff / last date diff / accum: unq all: +13 +26 -0 -0 / +13 +26 -0 -0 / 13 26
* notice: removed / changed dates: [2024-09-02] / [2024-09-16]

2024-09-16T00:37:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10875659138 # 530
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
* notice: last 14d: unq all: 19 104
* notice: prev accum: outdated-unq outdated-all / unq all: 788 4421 / 811 4558
* notice: next accum: outdated-unq outdated-all / unq all: 791 4455 / 812 4559
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-01] / [2024-09-14]

2024-09-14T12:39:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10862476470 # 529
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-14
* notice: last 14d: unq all: 22 137
* notice: prev accum: outdated-unq outdated-all / unq all: 785 4392 / 811 4558
* notice: next accum: outdated-unq outdated-all / unq all: 788 4421 / 811 4558
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-31] / []

2024-09-13T12:41:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10849295917 # 527