@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-09-17T00:28:49Z",
+  "timestamp" : "2024-09-17T12:13:00Z",
   "count_outdated" : 4459,
   "uniques_outdated" : 794,
-  "count" : 4585,
-  "uniques" : 825,
+  "count" : 4587,
+  "uniques" : 826,
   "views" : [
     {
       "timestamp": "2024-09-03T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 14, 16 ],
-      "count_decinc": [ 0, 16 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 2,
+      "count_minmax": [ 2, 16 ],
+      "count_decinc": [ 14, 16 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 2, 4 ]
     },
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 13,
       "uniques_minmax": [ 13, 13 ],
       "uniques_decinc": [ 0, 13 ]
+    },
+    {
+      "timestamp": "2024-09-17T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
