@@ -1,11 +1,11 @@
 {
-  "count": 126,
-  "uniques": 30,
+  "count": 114,
+  "uniques": 29,
   "views": [
     {
       "timestamp": "2024-09-03T00:00:00Z",
-      "count": 16,
-      "uniques": 4
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-09-16T00:00:00Z",
       "count": 26,
       "uniques": 13
+    },
+    {
+      "timestamp": "2024-09-17T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
