@@ -1,3 +1,12 @@
+2024-09-17T12:13:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10902772659 # 533
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
+* notice: last 14d: unq all: 29 114
+* notice: prev accum: outdated-unq outdated-all / unq all: 794 4459 / 825 4585
+* notice: next accum: outdated-unq outdated-all / unq all: 794 4459 / 826 4587
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -2 -14 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-09-03 2024-09-17]
+
 2024-09-17T00:28:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10894265158 # 532
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-17
